<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:src="@drawable/study_jams"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:src="@drawable/udacity"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/thanks_size"
            android:text="@string/thanks"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/fab_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/link_size"
            android:autoLink="web"
            android:text="@string/txtUdacity" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/link_size"
            android:autoLink="web"
            android:text="@string/txtStackOverFlow" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/link_size"
            android:autoLink="web"
            android:text="@string/txtAndroidDev" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/copyright"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"/>
    </LinearLayout>
</LinearLayout>